Fix dark mode: use html.dark-mode class, add distinct card backgrounds, white button text and icons

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -15,11 +15,11 @@
   height: auto;
   /* sticky footer fix end */
   margin-top: 3em;
-  color: mix(#fff, $gray, 25%);
+  color: #000;
   -webkit-animation: intro 0.3s both;
-          animation: intro 0.3s both;
+  animation: intro 0.3s both;
   -webkit-animation-delay: 0.45s;
-          animation-delay: 0.45s;
+  animation-delay: 0.45s;
   background-color: $lighter-gray;
   border-top: 1px solid $light-gray;
 
@@ -49,7 +49,7 @@
   .fab,
   .far,
   .fal {
-    color: mix(#fff, $gray, 25%);
+    color: #000;
   }
 }
 
@@ -74,7 +74,7 @@
     text-transform: uppercase;
   }
 
-  li + li:before {
+  li+li:before {
     content: "";
     padding-right: 5px;
   }
